<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_md"
    android:paddingEnd="@dimen/spacing_md"
    android:paddingBottom="@dimen/spacing_md"
    android:paddingTop="@dimen/header_top_spacing"
    android:id="@+id/listaItemsId">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_md"
        android:text="@string/title_list"
        android:textColor="@color/ug_blue"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/spacing_md">

        <EditText
            android:id="@+id/etBuscar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ug_blue"
            android:text="@string/btn_search"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvInventario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/text_secondary"
        android:dividerHeight="1dp" />

</LinearLayout>